# precommithooks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  LICENSE  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.cfg
.github/workflows/: black.yaml  dapperdata.yaml  gh_pages.yaml  mypy.yaml  pip-audit.yaml  pypi.yaml  pytest.yaml  ruff.yaml  tomlsort.yaml  tox.yaml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/source/: modules.rst  precommithooks.rst
pre_commit_hooks/: checknames.py
precommithooks/typings/exit_codes/: exit_codes.pyi
src/precommithooks/: __init__.py  checknames.py
tests/: __init__.py  test_checknames.py
