[metadata]
name = precommithooks
authors = Richard Broderick
license = GPLv3
description = Various precommithooks
url = https://github.com/rbroderi/precommithooks
version = 1.0.0
classifiers =
    Intended Audience :: Developers,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3),
    Programming Language :: Python,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = precommithooks
include_package_data = True

[options.extras_require]
testing =
    tox
